fixed issue with header image overflowing under navigation bar

--- a/www/html/coffee_and_beans/css/coffee_and_beans.css
+++ b/www/html/coffee_and_beans/css/coffee_and_beans.css
@@ -144,6 +144,16 @@
   #wrapper img{
       width:100%;       /* the image will now scale down as its parent gets smaller */
   }
+
+  /* ensures that the header doesn't overflow under the navigation bar */
+  @media screen and (max-width: 1000px) {
+    .header {
+      height: 20%;
+    }
+    .topnav {
+      padding: 5%;
+    }
+  }
   
   /* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
   @media screen and (max-width: 800px) {
